--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,11 @@ build:
     # Update appsettings.json with production connection string
     - sed -i 's|Server=34.124.219.191,1433;Database=Ecommerce;User Id=sa;Password=YourStrong@Password123!;TrustServerCertificate=True|Server=mssql-service,1433;Database=Ecommerce;User Id=sa;Password=YourStrong@Password123!;TrustServerCertificate=True;|g' appsettings.json
 
+    - sed -i 's|ecommercevue.bunlong.site|ecommercevue.bunlong.site|g' Program.cs
+
     # Verify the connection string was updated
     - cat appsettings.json | grep "DefaultConnection"
+    - cat Program.cs | grep "builder.Services.AddCors"
 
     # . at then end: is used the current directory to look for the Dockerfile
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA -t $CI_REGISTRY_IMAGE:latest .
