--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=34.124.219.191,1433;Database=Ecommerce;User Id=sa;Password=YourStrong@Password123!;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-CQSN3MN\\SQLSERVERDEV2022;Database=Ecommerce;User Id=sa;Password=12345;TrustServerCertificate=True"
+  },
+  "MongoDbSettings": {
+    "MongoDB": "mongodb+srv://cbunlong168_db_user:ooyZ1lqtgsz27dPG@clusterlocal.12eysnm.mongodb.net/?retryWrites=true&w=majority&appName=ClusterLocal",
+    "DatabaseName": "MongoDB",
+    "Collections": {
+      "EcommerceDotnet": "EcommerceDotnet"
+    }
   },
   "Swagger": {
     "Enabled": true,
