Create MongoDB and add image function

--- a/appsettings.json
+++ b/appsettings.json
@@ -13,7 +13,7 @@
     "MongoDB": "mongodb+srv://cbunlong168_db_user:ooyZ1lqtgsz27dPG@clusterlocal.12eysnm.mongodb.net/?retryWrites=true&w=majority&appName=ClusterLocal",
     "DatabaseName": "MongoDB",
     "Collections": {
-      "EcommerceDotnet": "EcommerceDotnet"
+      "ChatImages": "ChatImages"
     }
   },
   "Swagger": {
