change deploy on mongodb

--- a/Deploy/k8s/nosql/mongo-deployment.yaml
+++ b/Deploy/k8s/nosql/mongo-deployment.yaml
@@ -180,6 +180,8 @@ spec:
     ports:
     - protocol: UDP
       port: 53
+    # - protocol: TCP
+    #   port: 53
   # - to:
   #   # Allow monitoring system
   #   - podSelector:
