change deploy on chathub

--- a/Deploy/k8s/app/aspnet-app-deployment.yaml
+++ b/Deploy/k8s/app/aspnet-app-deployment.yaml
@@ -141,36 +141,67 @@ metadata:
     nginx.ingress.kubernetes.io/real-ip-recursive: "true"
     
     # CORS headers for Swagger and API
+    nginx.ingress.kubernetes.io/enable-cors: "true"
     nginx.ingress.kubernetes.io/cors-allow-origin: "https://ecommerceapi.bunlong.site,https://www.ecommerceapi.bunlong.site,https://ecommercevue.bunlong.site,https://www.ecommercevue.bunlong.site"
     nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS, PATCH"
-    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,Accept,Origin,X-Forwarded-For,X-Forwarded-Proto,x-signalr-user-agent,x-requested-with,x-ms-request-id,connection,upgrade"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Keep-Alive,Cache-Control,Content-Type,Range,Authorization,Accept,Origin,X-Forwarded-For,X-Forwarded-Proto,x-signalr-user-agent,x-requested-with,x-ms-request-id,connection,upgrade"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
-    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-max-age: "86400"
     
     # SSL and security
     nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Let Cloudflare handle HTTPS redirect
     nginx.ingress.kubernetes.io/force-ssl-redirect: "false"  # Let Cloudflare handle HTTPS redirect
+
+    # WebSocket and SignalR specific configuration
+    nginx.ingress.kubernetes.io/proxy-buffering: "off"
+    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_id"
     
-    # Add custom headers to pass Cloudflare info to application + CSP headers
+    # Enhanced configuration for SignalR and CORS
     nginx.ingress.kubernetes.io/configuration-snippet: |
+      # Cloudflare forwarding headers
       more_set_headers "X-Forwarded-Proto: https";
       more_set_headers "X-Forwarded-Port: 443";
+      
+      # Enhanced CORS headers for SignalR
+      if ($request_method = 'OPTIONS') {
+        add_header 'Access-Control-Allow-Origin' 'https://ecommercevue.bunlong.site' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH' always;
+        add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With,X-SignalR-User-Agent,Connection,Upgrade' always;
+        add_header 'Access-Control-Max-Age' 86400 always;
+        add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+        add_header 'Content-Length' 0 always;
+        return 204;
+      }
+      
       # CSP header to allow WebSocket connections
       more_set_headers "Content-Security-Policy: default-src 'self' http: https: data: blob: 'unsafe-inline'; connect-src 'self' ws: wss: http: https: *.bunlong.site; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data: https:";
-    
-    # Additional WebSocket support for SignalR
+
+    # Server snippet for WebSocket handling
     nginx.ingress.kubernetes.io/server-snippet: |
+      # WebSocket connection upgrade handling
+      map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+      }
+      
+      # Specific location for SignalR hub
       location /chathub {
         proxy_pass http://upstream_balancer;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         proxy_read_timeout 86400;
+        proxy_send_timeout 86400;
+        
+        # CORS headers for SignalR negotiate endpoint
+        add_header 'Access-Control-Allow-Origin' 'https://ecommercevue.bunlong.site' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
       }
     
     # # Add custom headers to pass Cloudflare info to application
