--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "ansible.python.interpreterPath": "c:\\Users\\cbunl\\AppData\\Local\\Programs\\Python\\Python312\\python.exe"
+    "ansible.python.interpreterPath": "c:\\Users\\cbunl\\AppData\\Local\\Programs\\Python\\Python312\\python.exe",
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": []
 }
