Modify Forget password with SendGrid Email API

--- a/appsettings.json
+++ b/appsettings.json
@@ -35,7 +35,7 @@
     "FromEmail": "c.bunlong168@gmail.com"
   },
   "SendGrid": {
-    "ApiKey": "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",
+    "ApiKey": "",
     "FromEmail": "sendgrid@bunlong.site",
     "FromName": "Ecommerce Support"
   }
