--- a/appsettings.json
+++ b/appsettings.json
@@ -30,13 +30,13 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Port": "587",
-    "Username": "c.bunlong168@gmail.com",
+    "Username": "****@gmail.com",
     "Password": "",
-    "FromEmail": "c.bunlong168@gmail.com"
+    "FromEmail": "****@gmail.com"
   },
   "SendGrid": {
     "ApiKey": "",
-    "FromEmail": "sendgrid@bunlong.site",
+    "FromEmail": "",
     "FromName": "Ecommerce Support"
   }
 }
