--- a/appsettings.json
+++ b/appsettings.json
@@ -35,8 +35,8 @@
     "FromEmail": "****@gmail.com"
   },
   "SendGrid": {
-    "ApiKey": "",
-    "FromEmail": "",
+    "ApiKey": "SendGrid_API_Key",
+    "FromEmail": "SendGrid_FromEmail",
     "FromName": "Ecommerce Support"
   }
 }
