--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build:
     - docker:28.3.3-dind
   before_script:
     - echo $CI_REGISTRY_PASSWORD | docker login -u $CI_REGISTRY_USER --password-stdin $CI_REGISTRY
+    - echo "SENDGRID_API_KEY = $EMAIL_API"
   script:
     # Update appsettings.json with production connection string
     - sed -i 's|Server=DESKTOP-CQSN3MN\\SQLSERVERDEV2022;Database=Ecommerce;User Id=sa;Password=12345;TrustServerCertificate=True|Server=mssql-service,1433;Database=Ecommerce;User Id=sa;Password=YourStrong@Password123!;TrustServerCertificate=True|g' appsettings.json
@@ -38,11 +39,7 @@ build:
     - sed -i 's|ecommerceapi.bunlong.site|ecommerceapi.bunlong.site|g' Program.cs
 
     # Verify the connection string was updated
-    - cat appsettings.json | grep "DefaultConnection"
-    - cat appsettings.json | grep "MongoDbSettings"
-    - cat Program.cs | grep "builder.Services.AddCors"
-    - cat appsettings.json | grep "ApiKey"
-    - cat appsettings.json | grep "FromEmail"
+    - cat appsettings.json
 
     # . at then end: is used the current directory to look for the Dockerfile
     - docker build -t $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA -t $CI_REGISTRY_IMAGE:latest .
